--- a/Client/Client/Client.csproj
+++ b/Client/Client/Client.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Move">
+      <HintPath>..\..\Move\Move\bin\Debug\Move.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
