--- a/Move/Move/Move.csproj
+++ b/Move/Move/Move.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Move.cs" />
     <Compile Include="Deck.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="War.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
